--- a/art-display/src/searchComponents/search.css
+++ b/art-display/src/searchComponents/search.css
@@ -1,7 +1,7 @@
 .search-filter-result-area {
     flex-grow: 2;
     justify-content: space-around;
-    /* background-color: black; */
+    background-color: #820263;
 }
 
 button {
@@ -19,10 +19,12 @@ p {
 }
 
 .search-filter-area {
+    background-color: #f0c6e5;
     display: flex;
     flex-flow: column;
     padding: 2.5%;
     margin: 2.5%;
+    border: #291720 solid .15rem;
 }
 
 .searchArea {
@@ -56,17 +58,25 @@ p {
 }
 
 .result-list {
-    background: black;
+    background: #f0c6e5;
     padding: 3% 0% 3% 0%;
     margin: 2.5%;
+    border: #291720 solid .15rem;
 }
 
 .result-item, .result-item-selected {
     margin: .75% 5% .75% 5%;
     width: 90%;
+    border: #291720 solid .15rem;
+    font-weight: bold;
+}
+
+.result-item {
+    background-color: #583515;
+    color: #f0c6e5;
 }
 
 .result-item-selected {
-    background-color: goldenrod;
+    background-color: #FB8B24;
 }
 
