--- a/art-display/src/index.css
+++ b/art-display/src/index.css
@@ -1,8 +1,10 @@
 .application {
     display: flex;
     flex-flow: row nowrap;
+    font-family: sans-serif;
+    font-weight:550;
 }
 
-div {
+/* div {
     border: 1px solid red;
-}
+} */
