added passing of art data to their respective components

--- a/art-display/src/searchComponents/search.css
+++ b/art-display/src/searchComponents/search.css
@@ -1,5 +1,6 @@
 .search-filter-result-area {
-    flex-grow: 2;
+    /* flex-grow: 2; */
+    width: 48vw;
     justify-content: space-around;
     background-color: #820263;
 }
