--- a/art-display/src/SideBarComponents/sidebar.css
+++ b/art-display/src/SideBarComponents/sidebar.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: column nowrap;
     background-color: #291720;
+    width: 28px;
 }
 
 /* add background images */
