--- a/art-display/src/DisplayComponents/display.css
+++ b/art-display/src/DisplayComponents/display.css
@@ -1,7 +1,8 @@
 .art-display {
     background-color: #e9559a;
-    width: 48vw;
-    /* flex-grow: 2; */
+    /* flex-grow: 10; */
+    width: 65vw;
+    
     padding: 1% 2% 1% 2%;
 }
 
@@ -33,7 +34,7 @@
 .display-image {
     /* margin: 0% 50% 0% 50%; */
     max-width: 95%;
-    max-height: 95%;
+    max-height: 50vh;
     border: #291720 solid .15rem;
 }
 
