--- a/art-display/src/SideBarComponents/sidebar.css
+++ b/art-display/src/SideBarComponents/sidebar.css
@@ -2,18 +2,19 @@
     display: flex;
     flex-flow: column nowrap;
     background-color: #291720;
-    width: 28px;
+    width: fit-content;
+    padding-top: .5rem;
 }
 
 /* add background images */
 .general-search-button {
-    margin: 5px;
-    height: 18px;
-    width: 18px;
+    margin: .5rem;
+    height: 1.5rem;
+    width: 1.5rem;
 }
 
 .filter-favorite-button {
-    margin: 5px;
-    height: 18px;
-    width: 18px;
+    margin: .5rem;
+    height: 1.5rem;
+    width: 1.5rem;
 }
