--- a/art-display/src/index.css
+++ b/art-display/src/index.css
@@ -3,8 +3,17 @@
     flex-flow: row nowrap;
     font-family: sans-serif;
     font-weight:550;
+    height: 100vh;
 }
 
-/* div {
-    border: 1px solid red;
-} */
+body {
+    left: -.5rem;
+    overflow: hidden;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+    overscroll-behavior: none;
+    touch-action: none;
+  }
