--- a/art-display/src/css/display.css
+++ b/art-display/src/css/display.css
@@ -18,12 +18,6 @@
     margin: 0%;
 }
 
-.favorite-button, .unfavorite-button {
-    border: 1px solid black;
-    height: 80%;
-    width: auto;
-}
-
 .display-image-container {
     width: 100%;
     display: flex;
@@ -42,4 +36,15 @@
     height: fit-content;
     display: flex;
     flex-flow: column nowrap;
+}
+
+.favorite-button {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 10%;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.favorite-button:hover {
+    background-color: #f7c2da;
 }
