--- a/art-display/src/css/index.css
+++ b/art-display/src/css/index.css
@@ -11,7 +11,7 @@ body {
     margin: 0;
     padding: 0;
     left: -.5rem;
-    background-color: aqua;
+    /* background-color: aqua; */
     overscroll-behavior: none;
     touch-action: none;
   }
