--- a/art-display/src/css/sidebar.css
+++ b/art-display/src/css/sidebar.css
@@ -9,15 +9,22 @@
 /* add background images */
 .sidebar-button {
     margin: .5rem;
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 10%;
+    background-color: rgba(0, 0, 0, 0.397);
+    color: white;
 }
+
+.sidebar-button:hover {
+    background-color: #f190bd;
+  }
 
 .general-search-image {
     /* background-color: aqua; */
-    background-image: url(../assets/searchIcon.png);
+    background: url('./../assets/searchIcon.png') no-repeat;
 }
 
 .filter-favorite-image {
-    background-image: url("../assets/favoriteIcon.png");
+    background: url('./../assets/favoriteIcon.png') no-repeat;
 }
